Staging, folding panel works now

--- a/Runtime/MAVLinkAPI.Scripts.asmdef
+++ b/Runtime/MAVLinkAPI.Scripts.asmdef
@@ -6,7 +6,9 @@
     "YamlDotNet",
     "StandaloneFileBrowser",
     "UnityEngine.SpatialTracking",
-    "Unity.VisualScripting.Core"
+    "Unity.VisualScripting.Core",
+    "repack.ui.tablelayout.Runtime",
+    "Autofill.Runtime"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
