--- a/TableLayout/Runtime/repack.ui.tablelayout.Runtime.asmdef
+++ b/TableLayout/Runtime/repack.ui.tablelayout.Runtime.asmdef
@@ -1,5 +1,5 @@
 {
-  "name": "repack.ui.tablelayout.Runtime",
+  "name": "ca.hpvdt.repack.tablelayout.Runtime",
   "rootNamespace": "UI.Tables",
   "references": [],
   "includePlatforms": [],
