add more dependencies
fix asmdef namespace of TableLayout

remove redundant files

--- a/MAVLinkAPI/package.json
+++ b/MAVLinkAPI/package.json
@@ -25,7 +25,11 @@
   ],
   "dependencies": {
     "ca.hpvdt.repack.tablelayout": "1.0.0",
-    "com.unity.textmeshpro": "3.0.6"
+    "com.unity.textmeshpro": "3.0.9",
+    "com.yamldotnet.uni": "13.2.0",
+    "io.github.gkngkc.unity-standalone-file-browser": "1.3.2",
+    "com.unity.xr.management": "4.5.1",
+    "com.unity.visualscripting": "1.9.7",
+    "com.jonagill.autofill": "1.0.7"
   }
-
 }
