MAVLinkAPI root namespace & name changed
add InputHistoryDropDown.cs

--- a/MAVLinkAPI/Runtime/MAVLinkAPI.Scripts.asmdef
+++ b/MAVLinkAPI/Runtime/MAVLinkAPI.Scripts.asmdef
@@ -1,5 +1,5 @@
 {
-  "name": "ca.hpvdt.mavlinkapi",
+  "name": "ca.hpvdt.mavlinkapi.Runtime",
   "rootNamespace": "MAVLinkAPI",
   "references": [
     "Unity.TextMeshPro",
