--- a/Tests/package.asmdef
+++ b/Tests/package.asmdef
@@ -2,6 +2,7 @@
   "name": "ca.hpvdt.mavlinkapi.Tests",
   "rootNamespace": "MAVLinkAPI",
   "references": [
+    "Unity.TextMeshPro",
     "ca.hpvdt.mavlinkapi.Runtime",
     "UnityEngine.TestRunner",
     "UnityEditor.TestRunner"
