manual size fitting for table with scrolling is gone
ScrollLock is also gone, not necessary

add & improve Examples from TableLayout

--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "com.unity.xr.management": "4.5.1",
     "com.unity.visualscripting": "1.9.7",
     "com.jonagill.autofill": "1.0.7"
-  }
+  },
+  "testables": [
+    "ca.hpvdt.mavlinkapi.Tests"
+  ]
 }
