--- a/Tests/package.asmdef
+++ b/Tests/package.asmdef
@@ -5,14 +5,16 @@
     "Unity.TextMeshPro",
     "ca.hpvdt.mavlinkapi.Runtime",
     "UnityEngine.TestRunner",
-    "UnityEditor.TestRunner"
+    "UnityEditor.TestRunner",
+    "YamlDotNet"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
   "allowUnsafeCode": false,
   "overrideReferences": true,
   "precompiledReferences": [
-    "nunit.framework.dll"
+    "nunit.framework.dll",
+    "YamlDotNet"
   ],
   "autoReferenced": false,
   "defineConstraints": [
